Usunięcie niepotrzebnych rzeczy i zmiana nazwy księgi w pliku main.js

--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,12 @@
 
 <body>
 
-    <header class="container sticky-top pt-2 pb-2">
+    <header class="container">
         <div id="navigation">
-            <select class="form-control" id="bibles"></select>
-            <select class="form-control" id="books"></select>
-            <select class="form-control" id="chapters"></select>
-            <select class="form-control" id="verse"></select>
+            <select id="bibles"></select>
+            <select id="books"></select>
+            <select id="chapters"></select>
+            <select id="verse"></select>
         </div>
     </header>
 
